monitoring/configs/kube-prometheus-stack/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.local.ruizops.com`)
      kind: Rule
      priority: 100
      middlewares:
        - name: grafana-headers
          namespace: monitoring
      services:
        - name: grafana
          namespace: monitoring
          port: 80
  tls:
    secretName: grafana-tls
